Fixed misalignment of project page elements for screen widths between 500px and 800px

--- a/css/main.scss
+++ b/css/main.scss
@@ -471,7 +471,7 @@ body {
         width: 65%;
         padding: 2em 0 0;
         h3 {
-            width: 90%;
+            width: 100%;
         }
         #about-img {
             width: 90%;
@@ -488,22 +488,22 @@ body {
             padding-bottom: 33.33%;
         }
         .p-nav {
-            width: 90%;
+            width: 100%;
             font-size: 1.2em;
             margin-top: 2em;
         }
         .p-description {
-            width: 90%;
+            width: 100%;
             font-size: 1em;
         }
         .p-img {
             float: none;
         }
         .half {
-            width: 90%;
+            width: 100%;
         }
         .full {
-            width: 90%;
+            width: 100%;
         }
     }
     @media only screen and (max-width: 500px) {
